--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,4 +1,10 @@
-  <nav class="navbar navbar-default">
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">FLASHER!</h1>
+    <p class="lead"></p>
+  </div>
+</div>
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="/logout">
@@ -11,9 +17,9 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
+        <a href="login"> pollen</a> 
       </div>
     </div>
   </div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
