modifying partials to use handlebars variable syntax

--- a/views/partials/card/card-block.handlebars
+++ b/views/partials/card/card-block.handlebars
@@ -4,9 +4,9 @@
     <div class="card">
         <div class="card-body">
             {{!-- need question from database --}}
-            <h5 class="card-title">Card Question</h5> 
+            <h5 class="card-title">{{question}}</h5> 
             {{!-- need answer from database --}}
-            <p class="card-text">Card Answer</p>
+            <p class="card-text">{{answer}}</p>
         </div>
     </div>
 </div>
