--- a/views/partials/dropdown/dropdown-block.handlebars
+++ b/views/partials/dropdown/dropdown-block.handlebars
@@ -5,4 +5,4 @@
 {{!-- So, as a partial it should look like... --}}
 
 {{!--  just needs the code for pulling from the database --}}
-<a class="dropdown-item" href="#">{{category}}</a> 
+<a class="dropdown-item" href="#">{{name}}</a> 
