--- a/views/takequiz.handlebars
+++ b/views/takequiz.handlebars
@@ -1,4 +1,25 @@
-  <nav class="navbar navbar-default">
+ 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <style>
+  .carousel{
+      background: #2f4357;
+      margin-top: 20px;
+  }
+  .carousel-item{
+      text-align: center;
+      min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
+  }
+  .bs-example{
+    margin: 20px;
+  }
+  </style>
+
+
+   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
@@ -10,14 +31,74 @@
         <h2>Take Quiz</h2>
         <form class="takequiz">
 
-          <div class="form-group">
+          <div class="">
             <label for="catergoryName">Category</label>
             <input type="drop-down" class="" id="" placeholder="Category">
           </div>
 
           <div class="form-group">
             <label for="exampleInputPassword1">Question</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+
+
+    <div class="bs-example">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Carousel indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner">
+
+                <div class="carousel-item active">
+                    <img src="/views/images/Flashcard-BG-Side2.gif" alt="First Slide">
+                </div>
+           
+
+                <div class="carousel-item">
+                    <img src="/views/images/Flashcard-BG-Side2.gif" alt="Second Slide">
+                </div>
+
+
+                <div class="carousel-item">
+                    <img src="/views/images/Flashcard-BG-Side2.gif" alt="Third Slide">
+                </div>
+
+            </div>
+            <!-- Carousel controls -->
+            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </div>
+
+
+            {{!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="" background="views/images/Flashcard-BG-Side2.gif" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div> --}}
+       
           </div>
 
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
@@ -35,4 +116,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src=""></script>
+
+  <script type="text/javascript" src="">$(document).ready(function(){
+    $('.carousel').carousel()});
+    </script>
