--- a/views/takequiz.handlebars
+++ b/views/takequiz.handlebars
@@ -6,7 +6,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <style>
   .carousel{
-      background: #2f4357;
+      background: ;
       margin-top: 20px;
   }
   .carousel-item{
@@ -15,6 +15,10 @@
   }
   .bs-example{
     margin: 20px;
+  }
+
+  h2{
+    text-align: center;
   }
   </style>
 
@@ -27,77 +31,60 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6 col-md-offset-3 text-center">
         <h2>Take Quiz</h2>
         <form class="takequiz">
-
-          <div class="">
-            <label for="catergoryName">Category</label>
-            <input type="drop-down" class="" id="" placeholder="Category">
+          <br/>
+            <div class="btn-group">
+              <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Category
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Stuff </a>
+                <a class="dropdown-item" href="">More Stuff </a>
+                <a class="dropdown-item" href="">Even More Stuff </a>
+              </div>
           </div>
+  
 
           <div class="form-group">
-            <label for="exampleInputPassword1">Question</label>
+
+            
+            <div class="bs-example">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Carousel indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <!-- Wrapper for carousel items -->
+                    <div class="carousel-inner">
+
+                        <div class="carousel-item active">
+                            <img src="/images/Flashcard-BG-Side2.gif" alt="First Slide">
+                        </div>
+                  
+
+                        <div class="carousel-item">
+                            <img src="/images/Flashcard-BG-Side2.gif" alt="Second Slide">
+                        </div>
 
 
-    <div class="bs-example">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Carousel indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-            <!-- Wrapper for carousel items -->
-            <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img src="/images/Flashcard-BG-Side2.gif" alt="Third Slide">
+                        </div>
 
-                <div class="carousel-item active">
-                    <img src="/views/images/Flashcard-BG-Side2.gif" alt="First Slide">
+                    </div>
+                    <!-- Carousel controls -->
+                    <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
                 </div>
-           
-
-                <div class="carousel-item">
-                    <img src="/views/images/Flashcard-BG-Side2.gif" alt="Second Slide">
-                </div>
-
-
-                <div class="carousel-item">
-                    <img src="/views/images/Flashcard-BG-Side2.gif" alt="Third Slide">
-                </div>
-
             </div>
-            <!-- Carousel controls -->
-            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
-        </div>
-    </div>
-
-
-            {{!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="" background="views/images/Flashcard-BG-Side2.gif" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div> --}}
        
           </div>
 
@@ -106,11 +93,9 @@
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
 
-          <button type="submit" class="btn btn-default">Menu</button>
-
+          <button type="submit" class="btn btn-default">Return to Menu</button>
         </form>
         <br />
-        <p>Or log in <a href="/login">here</a></p>
       </div>
     </div>
   </div>
