--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -18,7 +18,7 @@
       <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
         
-        <a href="/create">Link here</a>
+        <a href="/create">Create New Cards</a>
       </div>
     </div>
   </div>
