--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -10,7 +10,7 @@
   <div class="container">
     <h1 id="welcome" class="display-4">Welcome</h1>
     <p class="lead"></p>
-    <h2 id="membername">Welcome <span class="member-name"></span></h2>
+    {{!-- <h2 id="membername">Welcome <span class="member-name"></span></h2> --}}
         {{!-- <a href="/create">Link here</a> --}}
   </div>
 </div>
