--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -6,7 +6,7 @@
 
 
 {{!-- dropdown for categories --}}
-<div class="container">
+{{!-- <div class="container">
     <div class="row mt-2">
         <div class="col d-flex justify-content-center">
             <div class="dropdown">
@@ -14,22 +14,22 @@
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select a Category
                 </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    {{!-- these are going to have to dynamically change based on the number of categories in the category table --}}
-                    {{!-- Going to need a class to trigger the  selected category to pull from the API--}}
-                    {{!-- this'll need a {{#each block}} to create a link, so we're going to need a dropdown partial --}}
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> --}}
+{{!-- these are going to have to dynamically change based on the number of categories in the category table --}}
+{{!-- Going to need a class to trigger the  selected category to pull from the API--}}
+{{!-- this'll need a {{#each block}} to create a link, so we're going to need a dropdown partial --}}
 
-                    {{!-- {{#each Categories}} --}}
-                    <a class="dropdown-item" href="#">Category1</a>
+{{!-- {{#each Categories}} --}}
+{{!-- <a class="dropdown-item" href="#">Category1</a>
                     <a class="dropdown-item" href="#">Category2</a>
-                    <a class="dropdown-item" href="#">Category3</a>
-                    {{!-- {{/each}} --}}
+                    <a class="dropdown-item" href="#">Category3</a> --}}
+{{!-- {{/each}} --}}
 
 
-                </div>
+</div>
 
 
-                {{!-- <div class="container blog">
+{{!-- <div class="container blog">
                     <div class="row">
                         <div class="col-md-2 col-sm-2">
                             <a class="btn btn-light" href="/cms">New card</a>
@@ -44,51 +44,62 @@
                     </div>
                 </div> --}}
 
-                {{#each Categories}}
+{{!-- {{#each Categories}}
                 {{name}}
-                {{/each}}
+                {{/each}} --}}
 
 
-                
 
-            </div>
-        </div>
 
-        {{!-- <input type="text" placeholder="Enter a Question" class="questionInput">
+</div>
+</div>
 
-                <input type="text" placeholder="Enter the answer" class="answerInput">
 
-                <button type="submit" class="btn">Create Card</button> --}}
-                
+
+</div>
+
+{{!-- card partials --}}
+{{!--section for drop down --}}
+
+
+
+{{!--section for creating a new category --}}
+<div id="createCategory">
+    <tbody>
+        <tr id="form-row">
+            <form id="category-form">
+                <td colspan="4">
+                    <input type="text" placeholder="Enter a new Category" id="newCategory">
+                </td>
+                <td><button type="submit" class="buttonSubmit">create category</button></td>
+            </form>
+
+        </tr>
+    </tbody>
+</div>
+
+
+{{!-- section to create a new card  --}}
+<div class="row" id="createCard">
+    <div class="col d-flex flex-wrap justify-content-center">
+        <form id="newCardForm">
+            <td>
+                <div id="dropDown">
+                    <label for="category">Select Category</label>
+                    <select class="form-control" id="category">
+
+                    </select>
+                </div>
+            </td>
+            <td><input type="text" placeholder="Enter a Question" id="questionInput"></td>
+
+            <td><input type="text" placeholder="Enter the answer" id="answerInput"></td>
+
+            <td><button type="submit" class="create-card">Create Card</button></td>
+            </td>
+        </form>
     </div>
-
-    {{!-- card partials --}}
-
-    <div>
-        <label for="category">Select Category</label>
-        <select class="custom-select" id="category">
-
-        </select>
-            </div>
-
-    <div>
-        <tbody>
-                    <tr id="form-row">
-                        <form id="category-form">
-                            <td colspan="4">
-                                <input type="text" placeholder="Enter a new Category" id="newCategory">
-                            </td>
-                            <td><button type="submit" class="buttonSubmit">create category</button></td>
-                        </form>
-
-                    </tr>
-                </tbody>
-    </div>
-    <div class="row">
-        <div class="col d-flex flex-wrap justify-content-center">
-
-        </div>
-    </div>
+</div>
 
 
 
