--- a/views/takequiz.handlebars
+++ b/views/takequiz.handlebars
@@ -36,3 +36,108 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src=""></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <style>
+  .carousel{
+      background: ;
+      margin-top: 20px;
+  }
+  .carousel-item{
+      text-align: center;
+      min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
+  }
+  .bs-example{
+    margin: 20px;
+  }
+  h2{
+    text-align: center;
+  }
+  </style>
+
+
+   <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 text-center">
+        <h2>Take Quiz</h2>
+        <form class="takequiz">
+          <br/>
+            <div class="btn-group">
+              <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Category
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Stuff </a>
+                <a class="dropdown-item" href="">More Stuff </a>
+                <a class="dropdown-item" href="">Even More Stuff </a>
+              </div>
+          </div>
+  
+
+          <div class="form-group">
+
+            
+            <div class="bs-example">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Carousel indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <!-- Wrapper for carousel items -->
+                    <div class="carousel-inner">
+
+                        <div class="carousel-item active">
+                            <img src="/images/Flashcard-BG-Side2.gif" alt="First Slide">
+                        </div>
+                  
+
+                        <div class="carousel-item">
+                            <img src="/images/Flashcard-BG-Side2.gif" alt="Second Slide">
+                        </div>
+
+
+                        <div class="carousel-item">
+                            <img src="/images/Flashcard-BG-Side2.gif" alt="Third Slide">
+                        </div>
+
+                    </div>
+                    <!-- Carousel controls -->
+                    <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+            </div>
+       
+          </div>
+
+          <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span> <span class="msg"></span>
+          </div>
+
+          <button type="submit" class="btn btn-default">Return to Menu</button>
+        </form>
+        <br />
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <script type="text/javascript" src="">$(document).ready(function(){
+    $('.carousel').carousel()});
+    </script>
