Added test text to flash cards.

--- a/views/takequiz.handlebars
+++ b/views/takequiz.handlebars
@@ -20,8 +20,12 @@
   h2{
     text-align: center;
   }
-  </style>
 
+  .text{
+    color: black;
+    padding-bottom: 95px;
+  }
+  </style>
 
    <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -63,16 +67,25 @@
 
                         <div class="carousel-item active">
                             <img src="/images/Flashcard-BG-Side2.gif" alt="First Slide">
+                            <div class="carousel-caption d-lg-block text">
+                              <h1>Contents will be placed here.</h1>
+                            </div>
                         </div>
                   
 
                         <div class="carousel-item">
                             <img src="/images/Flashcard-BG-Side2.gif" alt="Second Slide">
+                            <div class="carousel-caption d-lg-block text">
+                              <h1>Stuff</h1>
+                            </div>
                         </div>
 
 
                         <div class="carousel-item">
                             <img src="/images/Flashcard-BG-Side2.gif" alt="Third Slide">
+                            <div class="carousel-caption d-lg-block text">
+                              <h1>More Stuff</h1>
+                            </div>
                         </div>
 
                     </div>
