--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -18,14 +18,9 @@
     </div>
 </div>
 
-<button onclick="renderCards">Append text</button>
-{{!-- card generation --}}
 
 <div class="row">
-    <div class="col d-flex flex-wrap justify-content-center">
-        <div id="cards">
-
-        </div>
+    <div class="col d-flex flex-wrap justify-content-center" id="cards">
     </div>
 </div>
 
@@ -38,7 +33,7 @@
 
 
 {{!-- modal --}}
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+{{!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
@@ -59,7 +54,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
