--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -5,64 +5,6 @@
 
 
 
-{{!-- dropdown for categories --}}
-{{!-- <div class="container">
-    <div class="row mt-2">
-        <div class="col d-flex justify-content-center">
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Select a Category
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> --}}
-{{!-- these are going to have to dynamically change based on the number of categories in the category table --}}
-{{!-- Going to need a class to trigger the  selected category to pull from the API--}}
-{{!-- this'll need a {{#each block}} to create a link, so we're going to need a dropdown partial --}}
-
-{{!-- {{#each Categories}} --}}
-{{!-- <a class="dropdown-item" href="#">Category1</a>
-                    <a class="dropdown-item" href="#">Category2</a>
-                    <a class="dropdown-item" href="#">Category3</a> --}}
-{{!-- {{/each}} --}}
-
-
-</div>
-
-
-{{!-- <div class="container blog">
-                    <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <a class="btn btn-light" href="/cms">New card</a>
-                        </div>
-                        <div class="col-md-2 col-sm-2">
-                            <a class="btn btn-light" href="/authors">Manage Categories</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 blog-container">
-                        </div>
-                    </div>
-                </div> --}}
-
-{{!-- {{#each Categories}}
-                {{name}}
-                {{/each}} --}}
-
-
-
-
-</div>
-</div>
-
-
-
-</div>
-
-{{!-- card partials --}}
-{{!--section for drop down --}}
-
-
-
 {{!--section for creating a new category --}}
 <div id="createCategory">
     <tbody>
@@ -77,6 +19,8 @@
         </tr>
     </tbody>
 </div>
+
+<button><a href="/card">Return to cards Page</a></button>
 
 
 
