--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -25,7 +25,7 @@
 
 <div id="jumbofour" class="jumbotron jumbotron-fluid">
   <div class="container">
-    <a id="review" class="navbar-brand" href="/create">CREATE</a>
+    <a id="review" class="navbar-brand" href="/card">CREATE</a>
     <p class="lead"></p>
   </div>
 </div>
