--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,6 +1,6 @@
 {{!-- navbar with name, sign in/out stuff --}}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="place-content:center">
-    <a class="navbar-brand justify-content-center" href="#">FlashCarder</a>
+  <a class="navbar-brand justify-content-center" href="/members">FLASHE<span style="color:yellow;">Я</span>!</a>
 </nav>
 
 
