--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,16 +1,11 @@
-<div id="jumboone" class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <a id="logout" class="navbar-brand" href="/logout">Logout</a>
-    <h1 id="flasher" class="display-4">FLASHE<span style="color:yellow;">Я</span>!</h1>
-    <p class="lead"></p>
-  </div>
-</div>
 
 <div id="jumbotwo" class="jumbotron jumbotron-fluid">
   <div class="container">
+    <a id="logout" class="navbar-brand" href="/logout">Logout</a>
     <h1 id="welcome" class="display-4">Welcome</h1>
     <p class="lead"></p>
-    <h2 id="membername">Welcome <span class="member-name"></span></h2>
+
+    <h2 id="membername"><span class="member-name"></span></h2>
         {{!-- <a href="/create">Link here</a> --}}
   </div>
 </div>
