--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -1,7 +1,7 @@
 {{!-- navbar with name, sign in/out stuff --}}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="place-content:center">
+{{!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="place-content:center">
   <a class="navbar-brand justify-content-center" href="#">FLASHE<span style="color:yellow;">Я</span>!</a>
-</nav>
+</nav> --}}
 
 {{!-- section to create a new card  --}}
 <div class="row">
@@ -24,11 +24,11 @@
     </div>
 </div>
 
-<footer id="sticky-footer" class="py-2 bg-dark text-light">
+{{!-- <footer id="sticky-footer" class="py-2 bg-dark text-light">
     <div class="container text-center">
             <a class="h5 text-light" href="/members">Return to Menu</a>
     </div>
-</footer>
+</footer> --}}
 
 
 
