--- a/views/card.handlebars
+++ b/views/card.handlebars
@@ -1,6 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="place-content:center">
-    <a class="navbar-brand justify-content-center" href="/members">FLASHE<span style="color:yellow;">Я</span>!</a>
-</nav>
+
 
 {{!-- section to create a new card  --}}
 <div class="row" id="createCard">
@@ -37,11 +35,11 @@
 
 
 
-<footer id="sticky-footer" class="py-2 bg-dark text-light">
+{{!-- <footer id="sticky-footer" class="py-2 bg-dark text-light">
     <div class="container text-center">
         <p>Copyright &copy; Your Website</p>
     </div>
-</footer>
+</footer> --}}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
