--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,7 +1,4 @@
 {{!-- navbar with name, sign in/out stuff --}}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="place-content:center">
-  <a class="navbar-brand justify-content-center" href="/members">FLASHE<span style="color:yellow;">Я</span>!</a>
-</nav>
 
 
 
@@ -25,11 +22,11 @@
 
 
 
-<footer id="sticky-footer" class="py-2 bg-dark text-light">
+{{!-- <footer id="sticky-footer" class="py-2 bg-dark text-light">
     <div class="container text-center">
         <p>Copyright &copy; Your Website</p>
     </div>
-</footer>
+</footer> --}}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
