adding test button for creating demo data

--- a/views/card.handlebars
+++ b/views/card.handlebars
@@ -20,7 +20,9 @@
             <label for="answerInput" class="card-labels">Input Answer Here:</label>
             <textarea type="text" placeholder="If your answer isn't 42, you're wrong!" id="answerInput"></textarea>
 
-            <button type="submit" class="create-card">Create Card</button>
+            <button type="submit" id="demo-button">Demo Data</button>
+
+            <button type="submit" id="create-button">Create Card</button>
 
         </form>
     </div>
