--- a/views/card.handlebars
+++ b/views/card.handlebars
@@ -1,5 +1,3 @@
-
-
 {{!-- section to create a new card  --}}
 <div class="row" id="createCard">
     <div class="col d-flex flex-wrap justify-content-center">
@@ -20,7 +18,9 @@
             <label for="answerInput" class="card-labels">Input Answer Here:</label>
             <textarea type="text" placeholder="If your answer isn't 42, you're wrong!" id="answerInput"></textarea>
 
-            <button type="submit" class="create-card">Create Card</button>
+            <button type="submit" id="demo-button">Demo Data</button>
+
+            <button type="submit" id="create-button">Create Card</button>
 
         </form>
     </div>
