--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -7,10 +7,11 @@
     <tbody>
         <tr id="form-row">
             <form id="category-form">
-                <td colspan="4">
+                <td>
+                    <label for="newCategory" class="card-labels">Please enter the category you would like to create:</label>
                     <input type="text" placeholder="Enter a new Category" id="newCategory">
                 </td>
-                <td><button type="submit" class="buttonSubmit">create category</button></td>
+                <td><button type="submit" class="buttonSubmit">Create Category</button></td>
             </form>
 
         </tr>
