--- a/views/card.handlebars
+++ b/views/card.handlebars
@@ -8,8 +8,8 @@
 
                 </select>
 
-                <p class="card-labels">Click the <a href="/create">here</a> to add a New Category!</p>
-                {{!-- <button></button> --}}
+                <p class="card-labels">Click <a href="/create">here</a> to add a New Category!</p>
+
             </div>
 
             <label for="questionInputs" class="card-labels">Input Question:</label>
@@ -26,20 +26,9 @@
     </div>
 </div>
 
-{{!-- <button><a href="/create">add new category</a></button> --}}
-
-
-
 
 </div>
 
-
-
-{{!-- <footer id="sticky-footer" class="py-2 bg-dark text-light">
-    <div class="container text-center">
-        <p>Copyright &copy; Your Website</p>
-    </div>
-</footer> --}}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
