--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,9 +21,9 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
 
-  <div class="card-footer">
-    <small class="text-muted">Last updated 3 mins ago</small>
-  </div>
+  <footer class="card-footer">
+    <small class="text-bold">Copyright RAVN 2020</small>
+  </footer>
 
 </body>
 
