--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -2,7 +2,7 @@
 <div id="jumbotwo" class="jumbotron jumbotron-fluid">
   <div class="container">
     <a id="logout" class="navbar-brand" href="/logout">Logout</a>
-    <h1 id="welcome" class="display-4">Welcome</h1>
+    <h1 id="welcome" class="display-4">WELCOME</h1>
     <p class="lead"></p>
 
     <h2 id="membername"><span class="member-name"></span></h2>
