--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="place-content:center">
-    <a class="navbar-brand justify-content-center" href="/members">FLASHE<span style="color:yellow;">Я</span>!</a>
+    <a class="navbar-brand justify-content-center" href="/members">Quiz<span style="color:yellow;">И</span>otes!</a>
   </nav>
   <div class="clearfix">
     {{{ body }}}
